--- a/docs/styles.css
+++ b/docs/styles.css
@@ -8,7 +8,8 @@
 
   .tooltipi:hover::after {
     content: attr(data-tooltip);
-    white-space: pre-wrap; /* Permet de conserver les sauts de ligne */
+    /*white-space: pre-wrap; /* Permet de conserver les sauts de ligne */
+    white-space: pre-line;
     position: absolute;
     background: #333; /* Couleur de fond de l'infobulle */
     color: #fff; /* Couleur du texte */
