--- a/docs/styles.css
+++ b/docs/styles.css
@@ -70,7 +70,7 @@
   .header-banner {
     position: relative;
     width: 100%;
-    height: 300px; /* Hauteur fixe pour le bandeau */
+    height: 100%; /* Hauteur fixe pour le bandeau */
     background-image: url('images/bandeau.jpg'); /* Chemin vers l'image */
     background-size: cover; /* L'image couvre tout l'espace */
     background-position: center; /* Centre l'image */
